2009-12-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs: If C#
	  compiler crashes, copy the stderr file to the monitor,
	  report error message telling user to look there, and log
	  location of the temp response/stderr/stdout files and avoid
	  deleting them. Fixes "Bug 515013 - Compiling; a method call
	  on an object that does not exist produces incomprehensible
	  /tmp/*.tmp error".

2009-12-02  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/ResolveVisitor.cs:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Completion/AspLanguageBuilder.cs: Worked
	  on ASP.NET support.

2009-12-01  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs: fixed
	  unit test.

2009-12-01  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* CSharpBinding.addin.xml:
	* MonoDevelop.CSharp.Resolver/NRefactoryResolver.cs:
	* MonoDevelop.CSharp.Completion/AspLanguageBuilder.cs:
	* MonoDevelop.CSharp.Completion/CSharpTextEditorCompletion.cs:
	  Worked on ASP.NET completion.

2009-12-01  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.CSharp/CSharpLanguageBinding.cs:
	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs:
	* MonoDevelop.CSharp.Highlighting/CSharpSyntaxMode.cs:
	* MonoDevelop.CSharp.Project/CompilerOptionsPanelWidget.cs:
	  Introduced the ConfigurationSelector class to all methods
	  that previously took a configuration name as string. This
	  eliminates the ambiguity between solution configuration
	  names and project configuration names.

2009-11-24  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs: Use 
	  correct property for identifying runtime.

2009-11-23  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs: Ignore
	  the platform flag with Mono <= 2.4, because mcs/gmcs didn't
	  support it.
