@@ -24,7 +24,7 @@
 		</Options>
 		
 		<Project name = "${ProjectName}" directory = ".">
-			<Options/>
+			<Options Target = "WinExe"/>
 			
 			<References>
 				<Reference type="Gac" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
