@@ -1,3 +1,10 @@
+2009-12-21  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* templates/GtkSharp2Project.xpt.xml:
+	* templates/GnomeSharp2Project.xpt.xml:
+	* templates/GladeSharp2Project.xpt.xml: Set correct assembly
+	  target for gui projects.
+
 2009-12-16  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.CSharp/CSharpBindingCompilerManager.cs: If C#
